# gray-meadows-shell

./: .gitignore  CONTRIBUTING  Cargo.toml  README.md  build.rs  config.example.toml
.github/: CONTRIBUTING.md  FUNDING.yml  README.md
include/: libqalculate_ffi.h
src/: bind_events.rs  broadcast.rs  config.rs  dbus.rs  display.rs  macros.rs  main.rs  pixbuf.rs  process.rs  reactivity.rs  scss.rs  session.rs  sql.rs  timeout.rs  window.rs
src/color/: mod.rs  model.rs
src/color/models/: cmyk.rs  hsl.rs  hsv.rs  mod.rs  oklab.rs  oklch.rs  rgba.rs
src/config/: enums.rs  mod.rs  structs.rs
src/config/enums/: ai.rs  mod.rs  screen_recorder.rs  weather.rs
src/config/structs/: ai.rs  mod.rs  screen_recorder.rs  weather.rs
src/dbus/: client.rs  crossroads.rs  mod.rs
src/ffi/: astalwp.rs  libqalculate.rs  libqalculate_ffi.cc  mod.rs
src/ffi/astalwp/: data.cc  data.h  event.cc  event.h  main.cc  main.h
src/ffi/ext/: libqalculate.cc
src/ffi/libqalculate/: main.cc  main.h
src/helpers/: cargo.rs  color.rs  filesystem.rs  gesture.rs  matching.rs  mod.rs  process.rs  scss.rs  unit.rs
src/ipc/: client.rs  mod.rs  server.rs
src/services/: calculator.rs  hyprland.rs  mod.rs  wireplumber.rs
src/services/ai/: conversation.rs  mod.rs  types.rs  variables.rs
src/services/apps/: mod.rs  runs.rs
src/services/g_translate/: language.rs  languages.rs  mod.rs  result.rs
src/services/mpris/: mpris_dbus.rs  mpris_metadata.rs  mpris_player.rs
src/services/networkmanager/: bus.rs  enums.rs  mod.rs
src/services/notifications/: bus.rs  client.rs  mod.rs  wrapper.rs
src/services/screen_recorder/: mod.rs
src/services/sysstats/: sensors.rs
src/services/tray/: icon.rs  tray_menu.rs
src/singletons/: apps.rs  clipboard.rs  date_time.rs  hyprland.rs  mod.rs  mpris.rs  wireplumber.rs
src/singletons/ai/: conversation.rs  images.rs  mod.rs  sql.rs  tools.rs  types.rs  variables.rs
src/singletons/apps/: mod.rs  pixbuf.rs  runs.rs
src/singletons/clipboard/: images.rs  mod.rs
src/singletons/g_translate/: language.rs  mod.rs  result.rs
src/singletons/hyprland/: mod.rs
src/singletons/mpris/: mod.rs  mpris_dbus.rs  mpris_metadata.rs  mpris_player.rs
src/singletons/networkmanager/: bus.rs  enums.rs  mod.rs
src/singletons/notifications/: bus.rs  mod.rs  wrapper.rs
src/singletons/openai/: conversation.rs  mod.rs  sql.rs  tools.rs  types.rs  variables.rs
src/singletons/sysstats/: mod.rs  sensors.rs
src/singletons/tray/: bus.rs  icon.rs  mod.rs  tray_icon.rs  tray_menu.rs
src/singletons/weather/: mod.rs
src/singletons/wireplumber/: mod.rs
src/sql/: actor.rs  mod.rs
src/sql/wrappers/: aichats.rs  commands.rs  mod.rs  state.rs  translate.rs  weather.rs
src/utils/: allocation_watcher.rs  display.rs  filesystem.rs  gesture.rs  mod.rs  process.rs  timeout.rs
src/widgets/: dot_separator.rs  mod.rs  popup.rs
src/widgets/bar/: base.rs  mod.rs  module.rs  wrapper.rs
src/widgets/common/: dot_separator.rs  dynamic_grid.rs  loading.rs  mod.rs  radial_progress.rs  revealer.rs  tabs.rs
src/widgets/notifications/: mod.rs  notification.rs
src/widgets/osd/: imp.rs  mod.rs
src/widgets/overview/: item.rs  list.rs  mod.rs
src/widgets/session/: mod.rs
src/widgets/sidebar_left/: mod.rs  tabs.rs
src/widgets/sidebar_right/: header.rs  mod.rs
src/widgets/windows/: fullscreen.rs  mod.rs  popup.rs
styles/: _common.scss  _user.scss  common.scss  main.scss  mixins.scss  user.scss
styles/bar/: _bar-client.scss  _bar-mpris.scss  _bar-sysstats.scss  _bar-tray.scss  _bar-workspaces.scss  _bar.scss
styles/components/: _clipboard.scss  _dot-separator.scss  _notifications.scss  _osd.scss  _overview.scss  _popup.scss  _session.scss
styles/sidebar/: _right-sidebar.scss
styles/sidebar/left-sidebar/: _ai-chat.scss  _base.scss  _color-picker.scss  (+2 more)
(+150 files in other folders)
