[package]
name = "gray-meadows-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
async-broadcast = "0.7.2"
async-channel = "2.5.0"
chrono = "0.4.41"
cxx = "1.0.158"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
freedesktop-desktop-entry = "0.8.0"
futures-signals = "0.3.34"
gdk4 = "0.10.3"
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
hyprland = "0.4.0-beta.3"
image = "0.25.9"
libadwaita = { version = "0.8.1", features = ["v1_4"] }
libc = "0.2.174"
lm-sensors = "0.5.0"
md5 = "0.8.0"
notify = "8.0.0"
nvml-wrapper = "0.11.0"
rand = "0.9.1"
regex = "1.11.1"
relm4 = "0.10.0"
relm4-macros = "0.10.0"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.140"
sha = "1.0.3"
shlex = "1.3.0"
sqlite = "0.37.0"
sysinfo = "0.37.2"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.9.10"
urlencoding = "2.1.3"
whirlpool = "0.10.4"

[build-dependencies]
cxx-build = "1.0.158"
