[package]
name = "gray-meadows-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
async-openai = { version = "0.32.2", features = ["full"] }
base64 = "0.22.1"
chrono = "0.4.41"
cxx = "1.0.158"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dbus-tokio = "0.7.6"
freedesktop-desktop-entry = "0.8.0"
futures = "0.3.31"
futures-signals = "0.3.34"
gdk4 = "0.10.3"
gemini-rust = "1.6.1"
gtk4 = { version = "0.10.3", features = ["v4_8"] }
gtk4-layer-shell = "0.7.1"
gtk4cmark = { git = "https://github.com/Inparsian/gtk4cmark-rs.git", branch = "main" }
hyprland = "0.4.0-beta.3"
image = "0.25.9"
libadwaita = { version = "0.8.1", features = ["v1_4"] }
libc = "0.2.174"
lm-sensors = "0.5.0"
md5 = "0.8.0"
notify = "8.0.0"
num-traits = "0.2.19"
nvml-wrapper = "0.11.0"
rand = "0.9.2"
regex = "1.11.1"
relm4 = "0.10.0"
relm4-macros = "0.10.0"
reqwest = "0.12.22"
schemars = "1.2.0"
serde = "1.0.219"
serde_json = "1.0.148"
sha = "1.0.3"
shlex = "1.3.0"
sqlite = "0.37.0"
strum = "0.27.2"
sysinfo = "0.37.2"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
whirlpool = "0.10.4"

[build-dependencies]
cxx-build = "1.0.158"
