[package]
name = "gray-meadows-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
async-openai = { version = "0.32.4", features = ["full"] }
base64 = "0.22.1"
chrono = "0.4.43"
cxx = "1.0.194"
dbus = "0.9.10"
dbus-crossroads = "0.5.3"
dbus-tokio = "0.7.6"
freedesktop-desktop-entry = "0.8.1"
futures = "0.3.31"
futures-signals = "0.3.34"
gdk4 = "0.10.3"
gemini-rust = "1.7.1"
gio = "0.21.5"
glib = "0.21.5"
graphene-rs = "0.21.5"
gsk4 = "0.10.3"
gtk4 = { version = "0.10.3", features = ["v4_8"] }
gtk4-layer-shell = "0.7.1"
gtk4cmark = "0.0.4"
hyprland = "0.4.0-beta.3"
image = "0.25.9"
libadwaita = { version = "0.8.1", features = ["v1_4", "v1_7"] }
libc = "0.2.180"
lm-sensors = "0.5.0"
md5 = "0.8.0"
notify = "8.2.0"
num-traits = "0.2.19"
nvml-wrapper = "0.11.0"
rand = "0.9.2"
regex = "1.12.3"
relm4 = "0.10.1"
relm4-macros = "0.10.1"
reqwest = "0.12.28"
rusqlite = { version = "0.38.0", features = ["serde_json", "chrono"] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
sha = "1.0.3"
shlex = "1.3.0"
strum = "0.27.2"
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["v4"] }
whirlpool = "0.10.4"

[build-dependencies]
cxx-build = "1.0.194"
